package net.proselyte.basepatterns.structural.composite;

public class CppDeveloper {
}
